force-app/main/default/objects/Related_Source__c/fields/Last_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Status__c</fullName>
    <label>Last Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non contactable</fullName>
            </value>
            <value>
                <fullName>Cost Sheet Shared</fullName>
            </value>
            <value>
                <fullName>Shared Project Details</fullName>
            </value>
            <value>
                <fullName>Customer Meeting Proposed</fullName>
            </value>
            <value>
                <fullName>Customer Meeting Confirmed</fullName>
            </value>
            <value>
                <fullName>Customer meeting done</fullName>
            </value>
            <value>
                <fullName>SV Proposed</fullName>
            </value>
            <value>
                <fullName>SV Confirmed</fullName>
            </value>
            <value>
                <fullName>SV Done</fullName>
            </value>
            <value>
                <fullName>Event Visit Proposed</fullName>
            </value>
            <value>
                <fullName>Event Visit Confirmed</fullName>
            </value>
            <value>
                <fullName>Event Visit done</fullName>
            </value>
            <value>
                <fullName>EOI Collected</fullName>
            </value>
            <value>
                <fullName>In process</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>