force-app/main/default/objects/Related_Source__c/fields/Last_Outbound_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Outbound_Call_Date__c</fullName>
    <label>Last Outbound Call Date</label>
    <type>DateTime</type>
</CustomField>