force-app/main/default/objects/Related_Source__c/fields/Last_Presales_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Presales_Call_Date__c</fullName>
    <label>Last Presales Call Date</label>
    <type>DateTime</type>
</CustomField>