force-app/main/default/objects/Related_Source__c/fields/Last_Sales_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Call_Date__c</fullName>
    <label>Last Sales Call Date</label>
    <type>DateTime</type>
</CustomField>