force-app/main/default/objects/Related_Source__c/fields/Last_Site_Visit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Site_Visit_Date_Time__c</fullName>
    <label>Last Site Visit Date/Time</label>
    <type>DateTime</type>
</CustomField>