force-app/main/default/objects/Related_Source__c/fields/Last_Unqualified_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Unqualified_At__c</fullName>
    <label>Last Unqualified At</label>
    <type>DateTime</type>
</CustomField>