force-app/main/default/objects/Related_Source__c/fields/Last_Unqualified_by__c.field-meta.xml
<CustomField>
    <fullName>Last_Unqualified_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Unqualified by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Related_Sources1</relationshipName>
    <type>Lookup</type>
</CustomField>