force-app/main/default/objects/Related_Source__c/fields/LastTransferDate__c.field-meta.xml
<CustomField>
    <fullName>LastTransferDate__c</fullName>
    <label>Last Transfer Date</label>
    <type>Date</type>
</CustomField>