force-app/main/default/objects/Related_Source__c/fields/Lead_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Lead_Age_Days__c</fullName>
    <formula>now()- CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Age Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>