force-app/main/default/objects/Related_Source__c/fields/Lead_OwnerSecondary__c.field-meta.xml
<CustomField>
    <fullName>Lead_OwnerSecondary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Related_Sources2</relationshipName>
    <type>Lookup</type>
</CustomField>