force-app/main/default/objects/Related_Source__c/fields/Lead_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Record Type</label>
    <type>Text</type>
</CustomField>