force-app/main/default/objects/Related_Source__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>External Referral</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Public Relations</fullName>
            </value>
            <value>
                <fullName>Seminar - Internal</fullName>
            </value>
            <value>
                <fullName>Seminar - Partner</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Word of mouth</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>