force-app/main/default/objects/Related_Source__c/fields/Lead_status1__c.field-meta.xml
<CustomField>
    <fullName>Lead_status1__c</fullName>
    <label>Lead status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>RNR</fullName>
            </value>
            <value>
                <fullName>Pre Sales Follow Up</fullName>
            </value>
            <value>
                <fullName>Allocated</fullName>
            </value>
            <value>
                <fullName>Site Visit Schedule</fullName>
            </value>
            <value>
                <fullName>New sales enquiry</fullName>
            </value>
            <value>
                <fullName>Sales Follow up</fullName>
            </value>
            <value>
                <fullName>SV Completed</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Request for Rejection</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>