force-app/main/default/objects/Related_Source__c/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fresh</fullName>
                <default>true</default>
                <label>Fresh</label>
            </value>
            <value>
                <fullName>Re-Opened</fullName>
            </value>
            <value>
                <fullName>Re-Engaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>