force-app/main/default/objects/Related_Source__c/fields/LinkedIn_Answer__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Answer__c</fullName>
    <label>LinkedIn Answer</label>
    <type>TextArea</type>
</CustomField>