force-app/main/default/objects/Related_Source__c/fields/LinkedIn_Question__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Question__c</fullName>
    <label>LinkedIn Question</label>
    <length>200</length>
    <type>Text</type>
</CustomField>