force-app/main/default/objects/Related_Source__c/fields/LiveChat_URL__c.field-meta.xml
<CustomField>
    <fullName>LiveChat_URL__c</fullName>
    <label>LiveChat URL</label>
    <type>Url</type>
</CustomField>