force-app/main/default/objects/Related_Source__c/fields/Location_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Location_Preferred__c</fullName>
    <label>Location Preferred</label>
    <length>200</length>
    <type>Text</type>
</CustomField>