force-app/main/default/objects/Related_Source__c/fields/Main_Lead__c.field-meta.xml
<CustomField>
    <fullName>Main_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Related Sources (Main Lead)</relationshipLabel>
    <relationshipName>Related_Sources1</relationshipName>
    <type>Lookup</type>
</CustomField>