force-app/main/default/objects/Related_Source__c/fields/Mark_Unqualified__c.field-meta.xml
<CustomField>
    <fullName>Mark_Unqualified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark Unqualified</label>
    <type>Checkbox</type>
</CustomField>