force-app/main/default/objects/Related_Source__c/fields/Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Campaign</label>
    <referenceTo>Marketing_Campaign__c</referenceTo>
    <relationshipLabel>Related Sources</relationshipLabel>
    <relationshipName>Related_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>