force-app/main/default/objects/Related_Source__c/fields/Maximum_Investment_in_Lakhs__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Investment_in_Lakhs__c</fullName>
    <label>Maximum Investment(in Lakhs)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Revealed</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>35</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>55</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>65</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>80</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>150</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>