force-app/main/default/objects/Related_Source__c/fields/Mode_of_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Enquiry__c</fullName>
    <label>Mode of Enquiry</label>
    <length>200</length>
    <type>Text</type>
</CustomField>