force-app/main/default/objects/Related_Source__c/fields/Mother_tongue__c.field-meta.xml
<CustomField>
    <fullName>Mother_tongue__c</fullName>
    <label>Mother tongue</label>
    <length>200</length>
    <type>Text</type>
</CustomField>