force-app/main/default/objects/Related_Source__c/fields/Next_follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_follow_up_Date__c</fullName>
    <label>Next follow up Date</label>
    <type>DateTime</type>
</CustomField>