force-app/main/default/objects/Related_Source__c/fields/No_Of_Times_Unqualified__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Times_Unqualified__c</fullName>
    <label>No. Of Times Unqualified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>