force-app/main/default/objects/Related_Source__c/fields/Not_open_to_share__c.field-meta.xml
<CustomField>
    <fullName>Not_open_to_share__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not open to share</label>
    <type>Checkbox</type>
</CustomField>