force-app/main/default/objects/Related_Source__c/fields/NRI_Prospect__c.field-meta.xml
<CustomField>
    <fullName>NRI_Prospect__c</fullName>
    <label>NRI Prospect</label>
    <type>TextArea</type>
</CustomField>