force-app/main/default/objects/Related_Source__c/fields/Number_Of_Calls__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Calls__c</fullName>
    <label>Number Of Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>