force-app/main/default/objects/Related_Source__c/fields/Number_of_homes_Owned__c.field-meta.xml
<CustomField>
    <fullName>Number_of_homes_Owned__c</fullName>
    <label>Number of homes Owned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>