force-app/main/default/objects/Related_Source__c/fields/Number_Verify_Result_Msg__c.field-meta.xml
<CustomField>
    <fullName>Number_Verify_Result_Msg__c</fullName>
    <label>Number Verify Result Msg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>