force-app/main/default/objects/Related_Source__c/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self Employed</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Professional/Salaried</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>