force-app/main/default/objects/Related_Source__c/fields/Offer_Scheme_interested__c.field-meta.xml
<CustomField>
    <fullName>Offer_Scheme_interested__c</fullName>
    <label>Offer/Scheme interested</label>
    <length>200</length>
    <type>Text</type>
</CustomField>