force-app/main/default/objects/Related_Source__c/fields/Open_Reason__c.field-meta.xml
<CustomField>
    <fullName>Open_Reason__c</fullName>
    <label>Open Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Callback later</fullName>
            </value>
            <value>
                <fullName>Call dropped</fullName>
            </value>
            <value>
                <fullName>Customer Disconnected the call</fullName>
            </value>
            <value>
                <fullName>RNR/Not reachable</fullName>
            </value>
            <value>
                <fullName>Switched Off</fullName>
            </value>
            <value>
                <fullName>Call Waiting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>