force-app/main/default/objects/Related_Source__c/fields/Organization_Address__c.field-meta.xml
<CustomField>
    <fullName>Organization_Address__c</fullName>
    <label>Organization Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>