force-app/main/default/objects/Related_Source__c/fields/Organization_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Organization_Pincode__c</fullName>
    <label>Organization Pincode</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>