force-app/main/default/objects/Related_Source__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Sources (Partner Account)</relationshipLabel>
    <relationshipName>Related_Sources1</relationshipName>
    <type>Lookup</type>
</CustomField>