force-app/main/default/objects/Related_Source__c/fields/Phone_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Phone_Verification_Status__c</fullName>
    <label>Phone Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>