force-app/main/default/objects/Related_Source__c/fields/Possession_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Possession_Timeline__c</fullName>
    <label>Possession Timeline</label>
    <length>200</length>
    <type>Text</type>
</CustomField>