force-app/main/default/objects/Related_Source__c/fields/Pre_Sales_User__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sales_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre Sales User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Related_Sources3</relationshipName>
    <type>Lookup</type>
</CustomField>