force-app/main/default/objects/Related_Source__c/fields/Preferred_Project_location__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Project_location__c</fullName>
    <label>Preferred Project location</label>
    <length>200</length>
    <type>Text</type>
</CustomField>