force-app/main/default/objects/Related_Source__c/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <label>Profession</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>