force-app/main/default/objects/Related_Source__c/fields/Project_Interested__c.field-meta.xml
<CustomField>
    <fullName>Project_Interested__c</fullName>
    <label>Project Interested</label>
    <length>200</length>
    <type>Text</type>
</CustomField>