force-app/main/default/objects/Related_Source__c/fields/Projects_of_other_builders_recently_visi__c.field-meta.xml
<CustomField>
    <fullName>Projects_of_other_builders_recently_visi__c</fullName>
    <label>Projects of other builders recently visi</label>
    <length>200</length>
    <type>Text</type>
</CustomField>