force-app/main/default/objects/Related_Source__c/fields/Purchase_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Timeline__c</fullName>
    <label>Purchase Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 2 Weeks</fullName>
            </value>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>2 Months</fullName>
            </value>
            <value>
                <fullName>&gt; 2 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>