force-app/main/default/objects/Related_Source__c/fields/Purchase_Type__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Type__c</fullName>
    <label>Purchase Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Home</fullName>
            </value>
            <value>
                <fullName>Seconda Home</fullName>
            </value>
            <value>
                <fullName>Third Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>