force-app/main/default/objects/Related_Source__c/fields/Realate_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Realate_Lead_Time__c</fullName>
    <label>Realate Lead Time</label>
    <type>DateTime</type>
</CustomField>