force-app/main/default/objects/Related_Source__c/fields/Realated_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Realated_Lead_Time__c</fullName>
    <formula>SLead__r.Realate_Lead_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Realated Lead Time</label>
    <type>DateTime</type>
</CustomField>