force-app/main/default/objects/Related_Source__c/fields/REAP_Name__c.field-meta.xml
<CustomField>
    <fullName>REAP_Name__c</fullName>
    <label>REAP Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>