force-app/main/default/objects/Related_Source__c/fields/Reasons_in_Detail__c.field-meta.xml
<CustomField>
    <fullName>Reasons_in_Detail__c</fullName>
    <label>Reasons in Detail</label>
    <type>TextArea</type>
</CustomField>