force-app/main/default/objects/Related_Source__c/fields/Reassigned_By__c.field-meta.xml
<CustomField>
    <fullName>Reassigned_By__c</fullName>
    <label>Reassigned By</label>
    <length>200</length>
    <type>Text</type>
</CustomField>